packages/typ/tests/fixtures/diagnostics/0741_fcm_pack_with_type_mismatch_09.ml
module type Box_iota = sig
  type t
  val value : t
end

module M_iota = struct
  type t = int
  let value = 8
end

let _ = (module M_iota : Box_iota with type t = bool)
